io세부 구현완료